processed/gerrit/txt_full/36880.txt
Change:     36880
Subject:    LU-12988 osd: tune group preallocation
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/36880
Change-Id:  I349158a3874cd38c1fb7cc9ba419665fbecaa5a2
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Alex Zhuravlev
Created:    2019-11-27 04:38:06.000000000
Updated:    2020-01-30 07:58:08.000000000
Patch Set:  1
Insertions: +6
Deletions:  -0
Comments:   2 (0 unresolved)

--- Reviewers ---
  REVIEWER: Andreas Dilger, Alex Zhuravlev, Artem Blagodarenko

--- Commit Message ---
LU-12988 osd: tune group preallocation

change group preallocation if ldiskfs striping is big.

Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: I349158a3874cd38c1fb7cc9ba419665fbecaa5a2

--- Review History ---

--- Message (Alex Zhuravlev, 2019-11-27 04:38:06.000000000) ---
Uploaded patch set 1.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-11-27 04:40:39.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  /home/green/git/lustre-release/lustre/osd-ldiskfs/osd_handler.c: In function ‘osd_mount’:
 /home/green/git/lustre-release/lustre/osd-ldiskfs/osd_handler.c:7721:48: error: expected expression before ‘->’ token
    LDISKFS_SB(osd_sb(o))->s_mb_group_prealloc = ->s_stripe;
                                                 ^
 /home/green/git/lustre-release/lustre/osd-ldiskfs/osd_handler.c: At top level:
 cc1: error: unrecognized command line option "-Wno-stringop-overflow" [-Werror]
 cc1: error: unrecognized command line option "-Wno-stringop-truncation" [-Werror]
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Lustre Gerrit Janitor, 2019-11-27 04:41:30.000000000) ---
Patch Set 1:

centos7: Compile failed

rhel8.0: Compile failed


 Job output URL: http://testing.linuxhacker.ru:3333/lustre-reports/4760/results.html

--- Message (wc-checkpatch, 2019-11-27 04:42:09.000000000) ---
Patch Set 1:

(1 comment)

1 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (jenkins, 2019-11-27 05:29:32.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/10222/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/70002/ : FAILURE

--- Message (Andreas Dilger, 2019-11-27 09:31:05.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Alex Zhuravlev, 2019-12-04 15:39:30.000000000) ---
Patch Set 1:

should be abandoned as well?

--- Message (Andreas Dilger, 2019-12-04 22:02:49.000000000) ---
Patch Set 1:

> should be abandoned as well?

Probably yes, unless you think these stats are useful in the long run, and should be merged into one of your other patches?

--- Message (Andreas Dilger, 2020-01-07 20:27:37.000000000) ---
Abandoned
